After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773404 - Client: Disconnect doesn't reset browser selection
Client: Disconnect doesn't reset browser selection
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: DAAP
HEAD
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-24 07:43 UTC by gnome.vrb
Modified: 2016-10-24 11:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reset search filters on client disconnect (662 bytes, patch)
2016-10-24 07:44 UTC, gnome.vrb
committed Details | Review

Description gnome.vrb 2016-10-24 07:43:52 UTC
Steps to reproduce: ( client side )

1. Connect to DAAP server.
2. Click on one of the properties ( say, an artist "artist1" in browser ). The results should be updated for "artist1".
3. Click on disconnect.
4. Un-focus and refocus on the share.
5. The selection in browser is "All artists", but the result shows only results for "artist1".
Comment 1 gnome.vrb 2016-10-24 07:44:32 UTC
Created attachment 338321 [details] [review]
Reset search filters on client disconnect
Comment 2 Jonathan Matthew 2016-10-24 11:49:00 UTC
Review of attachment 338321 [details] [review]:

pushed with a couple of changes as commit cfd1676

::: plugins/daap/rb-daap-source.c
@@ +814,3 @@
 	rb_daap_source_disconnect (source);
+
+	/* Clear search filters */

this isn't a useful comment

@@ +815,3 @@
+
+	/* Clear search filters */
+	g_signal_emit_by_name (RB_SOURCE (source), "reset-filters");

g_signal_emit_by_name takes a gpointer, so there's no reason to cast the RBDaapSource pointer to an RBSource pointer here.