Reset search filters on client disconnect

https://bugzilla.gnome.org/show_bug.cgi?id=773404